--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <p>International students might be a boon for many colleges and universities to offset losses during the coronavirus pandemic, say experts.</p>
 
-<p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the <a href="https://globalmigration.ucdavis.edu/devastating-economic-consequences-pushing-foreign-students-out-country">Global Migration Center at the University of California, Davis.</a></p>
+<p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the <a href="https://globalmigration.ucdavis.edu/devastating-economic-consequences-pushing-foreign-students-out-country"target="_blank">Global Migration Center at the University of California, Davis.</a></p>
 
 <p>International students contributed 458,290 jobs and $41 billion to the U.S. economy in the 2018-2019 academic year, according to the nonprofit Association of International Educators (NAFSA).</p>
 
-<iframe title="Economic Value International Students: Community Colleges " aria-label="Table" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="975"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+<iframe title="Economic Value International Students: Community Colleges " aria-label="Table" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="975"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
 
 
@@ -51,13 +51,13 @@
 </div>
 <p>Mostly from Asia, close to 162,000 international students attended colleges and universities in California last year, adding $6.8 billion of the $41 billion foreign students bring to the U.S. economy.</p>
 
-<iframe title="International Students Places of Origin" aria-label="Map" id="datawrapper-chart-EMgMy" src="https://datawrapper.dwcdn.net/EMgMy/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="408"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+<iframe title="International Students Places of Origin" aria-label="Map" id="datawrapper-chart-EMgMy" src="https://datawrapper.dwcdn.net/EMgMy/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="408"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
 
 <p>But colleges and universities are hurting financially as the pandemic has shut down many campuses since March, sending students online and off campus, and causing many to defer admission or transfer until the pandemic subsides.</p>
 
 
-<p>In April, when the infection continued to shutter campuses nationwide, then-University of California President Janet Napolitano pleaded for funding assistance in a letter to Governor Gavin Newsom.</p>
+<p>In April, when the infection continued to shutter campuses nationwide, then-University of California President Janet Napolitano pleaded for funding assistance in a <a href="https://universityofcalifornia.edu/sites/default/files/UC-COVID-19-budget-letter-to-state-leadership-041520.pdf"target="_blank">letter to Governor Gavin Newsom</a>.</p>
 
 <p>“I am bringing to your attention these significant, unanticipated costs to UC in many areas from health to student housing, which for March 2020 alone totaled $558 million,” wrote Napolitano.</p>
 
@@ -75,7 +75,7 @@ Photo credit: Jonah Brown/Unsplash</p>
 
 <p>The economic disruption of COVID-19 factored into MacMurray's decline, according to O’Connell.</p>
 
-<p>Considering the financial contributions of international students, U.S. colleges are focusing on recruitment overseas, according to the Institute of International Education’s 2019 Fall International Student Enrollment Snapshot Survey Report.</p>
+<p>Considering the financial contributions of international students, U.S. colleges are focusing on recruitment overseas, according to the <a href="file:///Users/alexandramacia/Downloads/Fall%202019%20Snapshot%20Survey%20(1).pdf"target="_blank"> Institute of International Education’s 2019 Fall International Student Enrollment Snapshot Survey Report</a>.</p>
 
 
 <p>Colleges are prioritizing student outreach to include China, India and Vietnam, according to IIE. Of the more than 1 million international students in the U.S., half are from China and India.</p>
@@ -103,7 +103,7 @@ Photo credit: Jonah Brown/Unsplash</p>
 
 <p>Wesleyan is collaborating with “peer institutions” to host a series of virtual events for international students, including virtual admissions workshops, online fairs, and virtual school visits to recruit students for the coming year, according to Rubenstein. International students make up 12% of Wesleyan's student body.</p>
 
-<p>But because of COVID-19 and increased visa and travel restrictions, international student enrollment for Fall 2020 is expected to decline again and further impact funding at institutions, according to <a href="https://www.nafsa.org/sites/default/files/media/document/2020-financial-impact-survey.pdf">NAFSA’s 2020 Financial Impact Survey.</a></p>
+<p>But because of COVID-19 and increased visa and travel restrictions, international student enrollment for Fall 2020 is expected to decline again and further impact funding at institutions, according to <a href="https://www.nafsa.org/sites/default/files/media/document/2020-financial-impact-survey.pdf"target="_blank">NAFSA’s 2020 Financial Impact Survey.</a></p>
 
 <p>“The loss of $41 billion contributed to local economies by international students each year would also be incredibly damaging to America as it begins to recover from the COVID-19 pandemic,” said Mary Sue Coleman, Association of American Universities president in a briefing regarding restrictions on international students in July 2020.</p>
 
@@ -118,7 +118,7 @@ Photo credit: Jonah Brown/Unsplash</p>
 
 <p>“A recognition of these contributions and commitment to continuing to welcome these students in future enrollment cycles are absolutely critical to maintaining our country’s top-tier status in attracting and retaining international students,” the alliance of more than 450 college and university presidents stated.</p>
 <div class="copyright">
-<p>Copyright by <a href="https://alexandramacia.github.io/" style="color:white;">Alexandra Macia</a>, 2021</p>
+<p>Copyright by <a href="https://alexandramacia.github.io/"target="_blank" style="color:white;">Alexandra Macia</a>, 2021</p>
 </div>
 </div>
 </div>
